# azuma

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  README.md  index.html  lefthook.yml  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
azuma/: __init__.py  cli.py  exceptions.py  grammar.lark  matchers.py  parser.py  scan.py  types.py  utils.py  validators.py
azuma/parsers/: __init__.py  condition.py  detection.py  utils.py
azuma/schemas/: __init__.py  base.py  detection.py  log_source.py  related.py  rule.py  rule_set.py  yaml_model.py
docs/: index.md
docs/references/: schemas.md
references/schemas/: index.html
search/: search_index.json
tests/: test_utils.py  test_validators.py  test_version.py  utils.py
tests/fixtures/: 1.yml  2.yml
tests/parsers/: test_detection.py
tests/schemas/: test_fuzz.py  test_rule_set.py
tests/schemas/rule/: test_all.py  test_all_of.py  test_base.py  test_base64.py  test_base64offset.py  test_cased.py  test_cidr.py  test_contains.py  test_endswith.py  test_exists.py  test_gt.py  test_gte.py  test_lt.py  test_lte.py  test_mach.py  test_match.py  test_multi_lines.py  test_n_of.py  test_nested_dict.py  test_null.py  test_re.py  test_selection.py  test_startswith.py  test_substrings.py  test_wide.py  test_wildcard.py  test_windash.py
