[tool.poetry]
name = "azuma"
version = "0.0.0"
description = "Yet another Sigma library for Python"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ninoseki/azuma"
repository = "https://github.com/ninoseki/azuma"

[tool.poetry.dependencies]
python = "^3.10"
lark = { extras = ["interegular"], version = ">=1.1,<2.0" }
loguru = ">=0.7,<1.0"
pydantic = ">=2.7,<3.0"
pyyaml = ">=6.0,<7.0"
regex = ">=2024.5.15"
returns = ">=0.22,<1.0"
typer = ">=0.12,<1.0"

[tool.poetry.group.dev.dependencies]
ci-py = "^1.0"
gitpython = "^3.1.43"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-pretty = "^1.2"
pytest-randomly = "^3.15"
ruff = "^0.4.10"
types-pyyaml = "^6.0.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocstrings = { extras = ["python"], version = "^0.25.1" }

[tool.poetry.scripts]
azuma = "azuma.cli:app"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin", "pydantic.mypy"]
